[gd_scene load_steps=4 format=3 uid="uid://lmlsf61h6k62"]

[ext_resource type="Script" path="res://scenes/ui/dialogs/SolveSummaryDialog/SolveSummaryDialog.gd" id="1_rab6b"]
[ext_resource type="FontFile" uid="uid://dbc572y3do6t1" path="res://assets/fonts/RobotoMono-VariableFont_wght.ttf" id="2_v67a2"]

[sub_resource type="Theme" id="Theme_b3hji"]
RichTextLabel/fonts/mono_font = ExtResource("2_v67a2")

[node name="SolveSummaryDialog" type="Window"]
title = "Solve Summary"
initial_position = 4
size = Vector2i(800, 500)
transient = true
script = ExtResource("1_rab6b")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_b3hji")
bbcode_enabled = true
text = "Line 1
Line 2
Line 3
This line is really long and will probably extend past the edge of the dialog.
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum
Lorem ipsum"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Close"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="meta_clicked" from="PanelContainer/VBoxContainer/ScrollContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
